// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`main notes query all: raw-props 1`] = `
Object {
  "body": "",
  "children": Array [],
  "custom": Object {
    "bond": 42,
  },
  "data": Object {},
  "desc": "",
  "fname": "foo.one",
  "parent": "foo",
  "stub": false,
  "title": "foo.one",
  "type": "note",
}
`;

exports[`main notes query with missing: missing snapshots 1`] = `
Array [
  Object {
    "body": "",
    "children": Array [
      "foo",
      "bar",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "root",
    "parent": "root",
    "stub": false,
    "title": "root",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.one",
      "foo.two",
      "foo.three",
    ],
    "custom": Object {},
    "data": Object {
      "schemaId": "b111db5b-bc52-4977-893b-307522f89ea3",
    },
    "desc": "",
    "fname": "foo",
    "parent": "root",
    "stub": false,
    "title": "foo",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "bar.one",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar",
    "parent": "root",
    "stub": true,
    "title": "bar",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {
      "bond": 42,
    },
    "data": Object {},
    "desc": "",
    "fname": "foo.one",
    "parent": "foo",
    "stub": false,
    "title": "foo.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.two",
    "parent": "foo",
    "stub": false,
    "title": "foo.two",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "foo.three.alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three",
    "parent": "foo",
    "stub": true,
    "title": "foo.three",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [
      "bar.one.alpha",
    ],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one",
    "parent": "bar",
    "stub": true,
    "title": "bar.one",
    "type": "note",
  },
  Object {
    "body": "",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "foo.three.alpha",
    "parent": "foo.three",
    "stub": false,
    "title": "foo.three.alpha",
    "type": "note",
  },
  Object {
    "body": "bar alpha content
",
    "children": Array [],
    "custom": Object {},
    "data": Object {},
    "desc": "",
    "fname": "bar.one.alpha",
    "parent": "bar.one",
    "stub": false,
    "title": "bar.one.alpha",
    "type": "note",
  },
]
`;

exports[`main notes write writeQuery: data snapshot 1`] = `
"bond
"
`;

exports[`main schema write writeRoot: root 1`] = `
Object {
  "body": "",
  "custom": Object {},
  "data": Object {},
  "desc": "",
  "fname": "root.schema",
  "stub": false,
  "title": "root",
  "type": "schema",
}
`;
